v0.10.0
- Remove explicit action "clean URLs", this happens automatically as items are processed
- Remove movie thumbnail Kodi automatically creates if your scraper is not configured to add a poster

v0.9.1 (2017-02-11)
- Fix setting season artwork

v0.9.0 (2017-01-27)
- Support movie set artwork
- Merge context items into main add-on
- Rearrange libs, drop last dependency not available in official Kodi repo
- Spread out checking for new artwork so they don't happen all at once (after the first run)
- Fix error when displaying non-ASCII characters in GUI
- Improve error handling for certain HTTP 5xx errors from fanart.tv
- Reduce TheMovieDB image rating sort adjustment
- Adjust TVDB image rating sort, so that an image with one rating of 10 doesn't end up at the top
- Move code from resources/lib to lib

v0.8.2 (2016-12-01)
- Fix manually selecting new fanart

v0.8.1 (2016-11-23)
- Fix silly bug in 0.8.0

v0.8.0 (2016-11-21)
- Add season fanart from fanart.tv
- Add button to remove extra artwork not enabled in add-on settings
- Cleanup and avoid errors when adding artwork from files
- Check existing URLs for problems
- Retry failed items in at most 2 days not 2 months
- Prefer English over other non-matching languages on non-English systems
- Ignore some false alarm updates from Kodi that aren't new items
- Other bug fixes

v0.7.0 (2016-10-03)
- Clean up series and artwork selection GUIs for Kodi 17 Krypton
- Drop extra dependencies CacheControl and lockfile, use common plugin cache
- Make more requests of TheTVDB to grab more fanart
- Fix non-working season landscape images (encode URLs from fanart.tv)
 - Includes a button to fix existing URLs manually

v0.6.4 (2016-09-18)
- Fix error in series selection for episode artwork

v0.6.3 (2016-09-13)
- Identify artwork with AD filenames
- Run full automatic process more often if filesystem only
- Add option to set minimum rating for auto processing
- Remove local artwork from library if file no longer exists