@@ -1,6 +1,7 @@
 import sys
 import xbmc
 import xbmcgui
+from itertools import chain
 
 from lib import cleaner
 from lib.artworkprocessor import ArtworkProcessor
@@ -19,6 +20,7 @@ class M(object):
     ADD_MISSING_FOR_ALL = 32405
     IDENTIFY_UNMATCHED_SETS = 32408
     REMOVE_EXTRA_ARTWORK = 32407
+    REMOVE_SPECIFIC_TYPES = 32414
     REMOVED_ART_COUNT = 32027
     NO_UNMATCHED_SETS = 32029
     UNMATCHED_SETS = 32056
@@ -39,7 +41,8 @@ def main():
         if command['command'] == 'set_autoaddepisodes':
             set_autoaddepisodes()
         elif command['command'] == 'remove_otherartwork':
-            runon_allmedia(L(M.REMOVE_EXTRA_ARTWORK), L(M.REMOVED_ART_COUNT), cleaner.remove_otherartwork)
+            fixcount = runon_medialist(cleaner.remove_otherartwork, L(M.REMOVE_EXTRA_ARTWORK))
+            notify_count(L(M.REMOVED_ART_COUNT), fixcount)
     else:
         processor = ArtworkProcessor()
         if processor.processor_busy:
@@ -47,7 +50,8 @@ def main():
         else:
             options = [(L(M.ADD_MISSING_FOR_NEW), 'NotifyAll(script.artwork.beef, ProcessNewItems)'),
                 (L(M.ADD_MISSING_FOR_ALL), 'NotifyAll(script.artwork.beef, ProcessAllItems)'),
-                (L(M.IDENTIFY_UNMATCHED_SETS), identify_unmatched_sets)]
+                (L(M.IDENTIFY_UNMATCHED_SETS), identify_unmatched_sets),
+                (L(M.REMOVE_SPECIFIC_TYPES), remove_specific_arttypes)]
         selected = xbmcgui.Dialog().select('Artwork Beef', [option[0] for option in options])
         if selected >= 0 and selected < len(options):
             action = options[selected][1]
@@ -55,6 +59,38 @@ def main():
                 pykodi.execute_builtin(action)
             else:
                 action()
+
+def notify_count(message, count):
+    countmessage = message.format(count)
+    log(countmessage, xbmc.LOGINFO)
+    xbmcgui.Dialog().notification('Artwork Beef', countmessage)
+
+def remove_specific_arttypes():
+    options = ((L(M.MOVIES), quickjson.get_movies), (L(M.SERIES), quickjson.get_tvshows),
+        (L(M.SEASONS), quickjson.get_seasons), (L(M.MOVIESETS), quickjson.get_moviesets),
+        (L(M.EPISODES), quickjson.get_episodes))
+
+    selected = xbmcgui.Dialog().select(L(M.REMOVE_SPECIFIC_TYPES), [option[0] + " ..." for option in options])
+    if selected >= 0 and selected < len(options):
+        busy = pykodi.get_busydialog()
+        busy.create()
+        allitems = options[selected][1]()
+        counter = {}
+        for arttype in chain.from_iterable(d.get('art', {}).keys() for d in allitems):
+            if '.' in arttype:
+                continue
+            if arttype in counter:
+                counter[arttype] += 1
+            else:
+                counter[arttype] = 1
+        arttypes = sorted(counter.keys())
+        busy.close()
+        selectedarttype = xbmcgui.Dialog().select(options[selected][0], ["{0}: {1}".format(arttype, counter[arttype])
+            for arttype in arttypes])
+        if selectedarttype >= 0 and selectedarttype < len(arttypes):
+            fixcount = runon_medialist(lambda mi: cleaner.remove_specific_arttype(mi, arttypes[selectedarttype]),
+                L(M.REMOVE_SPECIFIC_TYPES), allitems, options[selected][0])
+            notify_count(L(M.REMOVED_ART_COUNT), fixcount)
 
 def identify_unmatched_sets():
     busy = pykodi.get_busydialog()
@@ -85,16 +121,20 @@ def set_autoaddepisodes():
         if xbmcgui.Dialog().yesno(L(M.ADD_MISSING_HEADER), L(M.ADD_MISSING_MESSAGE)):
             pykodi.execute_builtin('NotifyAll(script.artwork.beef, ProcessAfterSettings)')
 
-def runon_allmedia(heading, countmessage, function):
+def runon_medialist(function, heading, medialist=None, mediatype=None):
+    ''' medialist defaults to every item in the library! '''
     progress = xbmcgui.DialogProgressBG()
     progress.create(heading)
     monitor = xbmc.Monitor()
 
-    steps_to_run = ((quickjson.get_movies, L(M.LISTING_ALL).format(L(M.MOVIES))),
+    if medialist is None:
+        steps_to_run = ((quickjson.get_movies, L(M.LISTING_ALL).format(L(M.MOVIES))),
             (quickjson.get_tvshows, L(M.LISTING_ALL).format(L(M.SERIES))),
             (quickjson.get_seasons, L(M.LISTING_ALL).format(L(M.SEASONS))),
             (quickjson.get_moviesets, L(M.LISTING_ALL).format(L(M.MOVIESETS))),
             (quickjson.get_episodes, L(M.LISTING_ALL).format(L(M.EPISODES))))
+    else:
+        steps_to_run = (((lambda: medialist), L(M.LISTING_ALL).format(mediatype)),)
     stepsize = 100 // len(steps_to_run)
 
     def update_art_for_items(items, start):
@@ -103,8 +143,7 @@ def runon_allmedia(heading, countmessage, function):
             progress.update(start + i * stepsize // len(items))
             mediainfo.prepare_mediaitem(item)
 
-            processed = function(item)
-            processed = mediainfo.get_artwork_updates(item['art'], processed)
+            processed = mediainfo.get_artwork_updates(item['art'], function(item))
             if processed:
                 mediainfo.update_art_in_library(item['mediatype'], item['dbid'], processed)
                 changedcount += len(processed)
@@ -113,22 +152,19 @@ def runon_allmedia(heading, countmessage, function):
         return changedcount
 
     fixcount = 0
-    for i, (listfunc, message) in enumerate(steps_to_run):
+    for i, (list_fn, message) in enumerate(steps_to_run):
         start = i * stepsize
         progress.update(start, message=message)
-        fixcount += update_art_for_items(listfunc(), start)
+        fixcount += update_art_for_items(list_fn(), start)
         if monitor.abortRequested():
             break
     progress.close()
-
-    countmessage = countmessage.format(fixcount)
-    log(countmessage, xbmc.LOGINFO)
-    xbmcgui.Dialog().notification('Artwork Beef', countmessage)
+    return fixcount
 
 def get_command():
     command = {}
-    for x in range(1, len(sys.argv)):
-        arg = sys.argv[x].split("=")
+    for i in range(1, len(sys.argv)):
+        arg = sys.argv[i].split("=")
         command[arg[0].strip().lower()] = arg[1].strip() if len(arg) > 1 else True
 
     return command
